tests/run/error_field_nonstruct.out
tests/run/error_field_nonstruct.ig:2:38: error: field access requires a struct value
