tests/run/error_field_nonstruct.ig
// error_field_nonstruct.ig — field access requires a struct value.
fn main() -> int { let n = 5  return n.x }
